Mon Dec  7 07:40:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/bmake.features:
          Disable mcpp for bmake

Fri Dec  4 23:24:21 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * bin/MakeProjectCreator/config/global.features:

          Added mpc feature to optionally turn on the indirection
          support on valuetype outgoing message. It defaults to
          be enabled. To be compatible with previous version TAO,
          it needs run mwc.pl with
          "-features valuetype_out_indirection=0" to disable it.

Fri Dec  4 17:25:32 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * NEWS:

          Removed entry for member validation feature in LoadBalancer as it
          should be in TAO NEWS.

Fri Dec  4 13:19:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * html/Stats/index.shtml:
          Added link for IBM Cell xampler performance stats

Fri Dec  4 10:20:23 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * bin/fuzz.pl:
          Removed -v option. The information which is generated
          by -v should always be visible.

Fri Dec  4 07:30:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-borland.h:
          CB2010 fix

Thu Dec  3 11:59:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Check CIAO_TRACE macros and put all run_*.pl files in a separate
          list

Wed Dec  2 18:17:04 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * NEWS:

          Added entry for member validation feature in LoadBalancer.

Wed Dec  2 13:46:00 UTC 2009  Martin Corino  <mcorino@remedy.nl>

        * debianbuild/{all files containign version numbers}:
          Updated to latest micro release.

Wed Dec  2 13:30:00 UTC 2009  Martin Corino  <mcorino@remedy.nl>

        * bin/make_release.py:
          Added code to update version numbers in ACE_ROOT/debianbuild files
          on release.