@@ -1,3 +1,8 @@
+Mon Dec  7 16:09:18 UTC 2009  Steve Huston  <shuston@riverace.com>
+
+        * tests/Basic_Types_Test.cpp: Add a verification for the endianness
+          setting.
+
 Mon Dec  7 07:40:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * bin/MakeProjectCreator/config/bmake.features:
